--- a/src/style/var.scss
+++ b/src/style/var.scss
@@ -1,6 +1,7 @@
 $primary: #ff88bb;
 $title: #333;
 $subtitle: #999;
+$line-color:rgb(245, 243, 243);
 $bg: #ccc;
 $head-title-color: #fff;
 $foot-border-color: #ddd;
@@ -16,6 +17,35 @@ body{
 }
 .headerColor {
   background: $primary;
+  .mint-header-title{
+    font-size: 16px;
+  }
+}
+.login{
+  margin-top:20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .mtinp{
+    margin-top: 10px;
+    border:1px solid #f0eded;
+    border-radius: 10px;
+    width:height(650rem);
+  }
+  .loginBtn{
+    margin-top:30px;
+    width:height(650rem);
+    height:54px;
+    background: $primary;
+    // border-radius: 50%;
+  }
+}
+.loginBtn{
+  margin-top:30px;
+  width:height(300srem);
+  height:40px;
+  background: $primary;
+  // border-radius: 50%;
 }
 
    
